# font-manager

./: CMakeLists.txt  appveyor.yml  azure-pipelines.yml  main.js  package.json
ci/: build-osx.sh
src/: FontDescriptor.h  FontManager.cc  FontManagerMac.mm  FontManagerWindows.cc
